--- a/genstyle.css
+++ b/genstyle.css
@@ -23,11 +23,11 @@ BODY {
 .preloader__image {
   position: relative;
   top: 50%;
-  left: 0%;
+  left: 50%;
   width: 70px;
   height: 70px;
-  margin-top: -35px;
-  margin-left: -35px;
+  margin-top: auto;
+  margin-left: auto;
   text-align: center;
   animation: preloader-rotate 2s infinite linear;
 }
