--- a/genstyle.css
+++ b/genstyle.css
@@ -24,14 +24,13 @@ BODY {
   position: relative;
   top: 50%;
   left: 50%;
+  right: 50%;
+  text-align: center;
   width: 70px;
   height: 70px;
-  margin-top: auto;
-  margin-left: auto;
-  text-align: center;
+  margin: auto;
   animation: preloader-rotate 2s infinite linear;
 }
-
 @keyframes preloader-rotate {
   100% {
     transform: rotate(360deg);
