--- a/genstyle.css
+++ b/genstyle.css
@@ -1,5 +1,5 @@
 BODY {
-  background: white;
+  background: #000000;
 }
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&family=Roboto:ital,wght@0,300;0,400;1,300&display=swap');
 .genfeasttext {
