--- a/genstyle.css
+++ b/genstyle.css
@@ -18,10 +18,7 @@ BODY {
 }
 .preloader {
   position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+margin: auto;
   overflow: hidden;
   background: white;
   z-index: 1001;
@@ -29,9 +26,6 @@ BODY {
 
 .preloader__image {
   position: relative;
-  top: 50%;
-  left: 50%;
-  right: 50%;
   text-align: center;
   width: 70px;
   height: 70px;
