--- a/genstyle.css
+++ b/genstyle.css
@@ -104,13 +104,14 @@ margin: auto;
 }
 
 .preloader__image {
-  position: relative;
-
+  position: absolute;
+  top: 50%;
+  right: 50%;
   text-align: center;
   width: 70px;
   height: 70px;
   margin: auto;
-  animation: preloader-rotate 2s infinite linear;
+  animation: preloader-rotate 4s infinite linear;
 }
 
 @keyframes preloader-rotate {
