--- a/genstyle.css
+++ b/genstyle.css
@@ -2,7 +2,7 @@ BODY {
   background: white;
   margin-left: 0;
   margin-right: 0;
-  margin-top: 10px;
+  margin-top: 0px;
   margin-bottom: 0;
 }
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&family=Roboto:ital,wght@0,300;0,400;1,300&display=swap');
@@ -53,11 +53,13 @@ BODY {
   color: #1a1a1a;
   font-size: 12px;
   font-weight: 500;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 #cellarlink {
   color: #1a1a1a;
-  font-size: 14px;
+  font-size: 13px;
+  margin-left: 10px;
+  margin-right: 10px;
   font-weight: 500;
   font-family: 'Raleway', sans-serif;
   text-decoration: none;
@@ -72,7 +74,7 @@ BODY {
   font-family: 'Raleway', sans-serif;
 }
 .asylum {
-  background: #DCDCDC;
+  background: #EEEEEE;
   padding-bottom: 10px;;
 }
 .banner{
@@ -487,19 +489,19 @@ body.sidebar-opened {overflow:hidden;}
   height: 100%;
   right: -300px;
   top:0;
-  background: #fff;
+  background: rgba(90, 90, 90, 0.9);
+  backdrop-filter: blur(10px);
   transition: right 0.4s ease;
   overflow: visible;
 }
 .sidebar .d-flex.p-2 {display:-webkit-box;display:flex;padding: 10px!important;}
 .sidebar .text{
+  margin-top: 10px;
   color: white;
-
   font-size: 18px;
   font-weight: 600;
   font-family: 'Raleway', sans-serif;
   text-align: center;
-  background: black;
   letter-spacing: 1px;
   -webkit-box-pack: justify;    -ms-flex-pack: justify;    justify-content: space-between; -webkit-box-align: center;    -ms-flex-align: center;    align-items: center;
 }
@@ -525,10 +527,28 @@ body.sidebar-opened {overflow:hidden;}
   transition: .5s ease-in-out;
   cursor: pointer;
 }
+
+.GeneralBan {
+  background: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(10px);
+  width: 100%;
+  position: fixed;
+}
+.GeneralBanLogo {
+  position: fixed;
+  margin-top: 5px;
+  margin-left: 5px;
+}
+.GeneralBanMenu {
+  text-align: right;
+}
+.LanguagesSelect {
+ margin-top: 10px;
+}
 #nav-icon3 span {
   display: block;
   position: absolute;
-  height: 2px;
+  height: 1.5px;
   width: 100%;
   background: #313131;
   border-radius: 0px;
@@ -574,10 +594,22 @@ body.sidebar-opened {overflow:hidden;}
   width: 0%;
   left: 50%;
 }
-#submenutext {
+.MenuLinksStyle {
   font-size: 15px;
   font-family: 'Raleway', sans-serif;
   font-weight: 500;
-  color: black;
+  color: #fff;
   font-style: normal;
+  text-decoration: none
+}
+.SelectedMenuLinksStyle {
+  font-size: 15px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
+  color: #3C3C3C;
+  font-style: normal;
+  text-decoration: none
+}
+.InMenuTextKeeper {
+  padding-bottom: 20px;
 }
