--- a/genstyle.css
+++ b/genstyle.css
@@ -491,6 +491,7 @@ body.sidebar-opened {overflow:hidden;}
   top:0;
   background: rgba(90, 90, 90, 0.9);
   backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px) saturate(100%) contrast(60%) brightness(130%);
   transition: right 0.4s ease;
   overflow: visible;
 }
@@ -531,6 +532,7 @@ body.sidebar-opened {overflow:hidden;}
 .GeneralBan {
   background: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px) saturate(100%) contrast(60%) brightness(130%);
   width: 100%;
   position: fixed;
 }
